<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ini_banner"
        android:src="@drawable/banner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/green2"
            app:cornerRadius="8dp"
            android:text="@string/text_btn_scan"
            android:textAllCaps="false"
            style="@style/button"
            app:icon="@drawable/scan"
            app:iconTint="@color/greenIcon"
            app:iconGravity="textStart"
            android:layout_marginBottom="10dp"
            />


        <LinearLayout
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/card"
            android:elevation="3dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_poin"
                android:gravity="center"
                style="@style/card"
                />

            <TextView
                android:id="@+id/jml_poin"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jml_poin"
                android:gravity="center"
                style="@style/poin"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:background="@drawable/card_white"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/jml_transaksi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="12"
                        android:gravity="center"
                        style="@style/riwayat"
                        />

                    <TextView
                        android:id="@+id/ket_transaksi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Transaksi"
                        style="@style/riwayat"
                        />

                </LinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_grey"
                    android:layout_marginHorizontal="40dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/jml_tukar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="12"
                        android:gravity="center"
                        style="@style/riwayat"
                        />

                    <TextView
                        android:id="@+id/ket_tukar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tukar"
                        style="@style/riwayat"
                        />

                </LinearLayout>


            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:elevation="2dp"
            android:background="@drawable/card_penggunaan">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_penggunaan"/>

            <TextView
                android:id="@+id/cara_penggunaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_edit"
                android:maxLines="2"
                style="@style/poin"
                />


        </LinearLayout>



    </LinearLayout>




</LinearLayout>